--- a/README
+++ b/README
@@ -10,4 +10,6 @@ Lesson 4: -Normalization
           -One hot và Dummy
           -Các thuật toán Encode_category
 Chart_type: -Vẽ các loại biểu đồ và chú thích ( chart_type_HTA)
+Lesson6: Làm về dự báo giá nhà (Home_bosston) với hồi quy 1 biến
+Lesson7: xây dựng các hàm tính toán trong linear regression
           
