--- a/README
+++ b/README
@@ -12,4 +12,7 @@ Lesson 4: -Normalization
 Chart_type: -Vẽ các loại biểu đồ và chú thích ( chart_type_HTA)
 Lesson6: Làm về dự báo giá nhà (Home_bosston) với hồi quy 1 biến
 Lesson7: xây dựng các hàm tính toán trong linear regression
-          
+Lesson8: Xử lý bài toán "Dự đoán giá nhà" hoàn chỉnh theo các bước
+Lesson9: Sử dụng lựa chọn tính năng và trích chọn đặc trưng để tối ưu bài toán
+Lesson10: Xử lý bài toán "Dự báo thời tiết" theo bài toán phân lớp
+Lesson11: Xử lý và đánh giá bài toán phân loại dựa trên các biểu đồ 
