--- a/README
+++ b/README
@@ -16,3 +16,5 @@ Lesson8: Xử lý bài toán "Dự đoán giá nhà" hoàn chỉnh theo các bư
 Lesson9: Sử dụng lựa chọn tính năng và trích chọn đặc trưng để tối ưu bài toán
 Lesson10: Xử lý bài toán "Dự báo thời tiết" theo bài toán phân lớp
 Lesson11: Xử lý và đánh giá bài toán phân loại dựa trên các biểu đồ 
+Lesson12: Xử lý overfiting 
+Lesson13: Tạo 1 chương trình xử lý code hoàn chỉnh
